# docs/swagger.json
@@ -18,6 +18,32 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/levels": {
+            "get": {
+                "description": "lista todos os levels disponiveis",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Levels"
+                ],
+                "summary": "Lista todos os levels",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/levels.LevelResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/me": {
             "get": {
                 "security": [
@@ -341,6 +367,17 @@
         }
     },
     "definitions": {
+        "levels.LevelResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "modules.ModuleResponse": {
             "type": "object",
             "properties": {
