# internal/resources/levels/levelResponse.go
@@ -1,0 +1,6 @@
+package levels
+
+type LevelResponse struct {
+	ID   uint   `json:"id"`
+	Name string `json:"name"`
+}
